unc-sdk-macros/src/core_impl/abi/snapshots/generate_abi_callback_args.snap
---
source: unc-sdk-macros/src/core_impl/abi/abi_generator.rs
expression: pretty_print_fn_body_syn_str(actual)
---
    ::unc_sdk::__private::AbiFunction {
        name: ::std::string::String::from("method"),
        doc: ::std::option::Option::None,
        kind: ::unc_sdk::__private::AbiFunctionKind::View,
        modifiers: ::std::vec![],
        params: ::unc_sdk::__private::AbiParameters::Borsh {
            args: ::std::vec![
                ::unc_sdk::__private::AbiBorshParameter { name :
                ::std::string::String::from("y"), type_schema :
                ::unc_sdk::borsh::schema_container_of:: < String > (), }
            ],
        },
        callbacks: ::std::vec![
            ::unc_sdk::__private::AbiType::Borsh { type_schema :
            ::unc_sdk::borsh::schema_container_of:: < u64 > (), },
            ::unc_sdk::__private::AbiType::Json { type_schema : gen.subschema_for:: <
            Vec < u8 > > (), }
        ],
        callbacks_vec: ::std::option::Option::None,
        result: ::std::option::Option::None,
    }

