unc-sdk-macros/src/core_impl/abi/snapshots/generate_abi_fallible_borsh.snap
---
source: unc-sdk-macros/src/core_impl/abi/abi_generator.rs
expression: pretty_print_fn_body_syn_str(actual)
---
    ::unc_sdk::__private::AbiFunction {
        name: ::std::string::String::from("f3"),
        doc: ::std::option::Option::None,
        kind: ::unc_sdk::__private::AbiFunctionKind::Call,
        modifiers: ::std::vec![::unc_sdk::__private::AbiFunctionModifier::Payable],
        params: ::unc_sdk::__private::AbiParameters::Borsh {
            args: ::std::vec![
                ::unc_sdk::__private::AbiBorshParameter { name :
                ::std::string::String::from("arg0"), type_schema :
                ::unc_sdk::borsh::schema_container_of:: < FancyStruct > (), }
            ],
        },
        callbacks: ::std::vec![],
        callbacks_vec: ::std::option::Option::None,
        result: ::std::option::Option::Some(::unc_sdk::__private::AbiType::Borsh {
            type_schema: ::unc_sdk::borsh::schema_container_of::<
                <Result<IsOk, Error> as unc_sdk::__private::ResultTypeExt>::Okay,
            >(),
        }),
    }

