unc-sdk-macros/src/core_impl/abi/snapshots/generate_abi_init_ignore_state.snap
---
source: unc-sdk-macros/src/core_impl/abi/abi_generator.rs
expression: pretty_print_fn_body_syn_str(actual)
---
    ::unc_sdk::__private::AbiFunction {
        name: ::std::string::String::from("new"),
        doc: ::std::option::Option::None,
        kind: ::unc_sdk::__private::AbiFunctionKind::Call,
        modifiers: ::std::vec![::unc_sdk::__private::AbiFunctionModifier::Init],
        params: ::unc_sdk::__private::AbiParameters::Json {
            args: ::std::vec![],
        },
        callbacks: ::std::vec![],
        callbacks_vec: ::std::option::Option::None,
        result: ::std::option::Option::None,
    }

