unc-sdk-macros/src/core_impl/abi/snapshots/generate_abi_private_callback_vec.snap
---
source: unc-sdk-macros/src/core_impl/abi/abi_generator.rs
expression: pretty_print_fn_body_syn_str(actual)
---
    ::unc_sdk::__private::AbiFunction {
        name: ::std::string::String::from("method"),
        doc: ::std::option::Option::None,
        kind: ::unc_sdk::__private::AbiFunctionKind::View,
        modifiers: ::std::vec![::unc_sdk::__private::AbiFunctionModifier::Private],
        params: ::unc_sdk::__private::AbiParameters::Json {
            args: ::std::vec![],
        },
        callbacks: ::std::vec![],
        callbacks_vec: ::std::option::Option::Some(::unc_sdk::__private::AbiType::Json {
            type_schema: gen.subschema_for::<String>(),
        }),
        result: ::std::option::Option::Some(::unc_sdk::__private::AbiType::Json {
            type_schema: gen.subschema_for::<bool>(),
        }),
    }

